Changed the link text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Практикуемся работать с Git и GitHube</title>
 </head>
 <body>
-  
+  <a href="#">Перейти на страницу „О курсе“</a>
 </body>
 </html>
