--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Практикуемся с Git</title>
 </head>
 <body>
+  <h1>Это заголовок первого уровня</h1>
   <a href="#">Перейти на страницу „О курсе“</a>
 </body>
 </html>
