--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body class="site-body">
   <h1 class="title">Главная страница</h1>
+  <p class="description">
+    Временное описание данной страницы
+  </p>
   <a href="#">Перейти на страницу „О курсе“</a>
 </body>
 </html>
